--- a/qt/arm-pro/vison_trace_host/mainwindow.ui
+++ b/qt/arm-pro/vison_trace_host/mainwindow.ui
@@ -61,6 +61,16 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
+          <widget class="QPushButton" name="pushButton_stop">
+           <property name="text">
+            <string>STOP</string>
+           </property>
+           <property name="shortcut">
+            <string>Space</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <layout class="QGridLayout" name="gridLayout">
            <item row="0" column="2">
             <spacer name="horizontalSpacer_2">
@@ -200,7 +210,7 @@
      <x>0</x>
      <y>0</y>
      <width>726</width>
-     <height>28</height>
+     <height>19</height>
     </rect>
    </property>
   </widget>
