update full screen

--- a/qt/arm-pro/vison_trace_host/mainwindow.ui
+++ b/qt/arm-pro/vison_trace_host/mainwindow.ui
@@ -239,6 +239,9 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
+     <item row="1" column="0">
+      <widget class="QTextBrowser" name="textBrowser"/>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -246,8 +249,12 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QTextBrowser" name="textBrowser"/>
+     <item row="2" column="0">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>EXIT</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
