--- a/qt/pc-pro/vision_trace_pc/mainwindow.ui
+++ b/qt/pc-pro/vision_trace_pc/mainwindow.ui
@@ -6,68 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>636</width>
-    <height>546</height>
+    <width>610</width>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton_con_net">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>280</y>
-      <width>96</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>ping network</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="radioButtonCar">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>320</y>
-      <width>112</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(138, 226, 52);</string>
-    </property>
-    <property name="text">
-     <string>Car</string>
-    </property>
-    <property name="checkable">
-     <bool>false</bool>
-    </property>
-    <property name="autoExclusive">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_update">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>240</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>update</string>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>30</y>
-      <width>211</width>
+      <y>80</y>
+      <width>221</width>
       <height>191</height>
      </rect>
     </property>
@@ -79,7 +31,7 @@
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>188</width>
+       <width>204</width>
        <height>146</height>
       </rect>
      </property>
@@ -136,15 +88,15 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
-      <width>331</width>
-      <height>481</height>
+      <y>80</y>
+      <width>321</width>
+      <height>471</height>
      </rect>
     </property>
     <property name="title">
      <string>机器人</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -238,7 +190,7 @@
     <widget class="QWidget" name="gridLayoutWidget_3">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>30</x>
        <y>200</y>
        <width>256</width>
        <height>256</height>
@@ -275,7 +227,7 @@
            </size>
           </property>
           <property name="text">
-           <string>UP</string>
+           <string>上</string>
           </property>
           <property name="shortcut">
            <string>Up</string>
@@ -310,7 +262,7 @@
            </size>
           </property>
           <property name="text">
-           <string>LEFT</string>
+           <string>左</string>
           </property>
           <property name="shortcut">
            <string>Left</string>
@@ -332,7 +284,7 @@
            </size>
           </property>
           <property name="text">
-           <string>DOWN</string>
+           <string>下</string>
           </property>
           <property name="shortcut">
            <string>Down</string>
@@ -354,7 +306,7 @@
            </size>
           </property>
           <property name="text">
-           <string>RIGHT</string>
+           <string>右</string>
           </property>
           <property name="shortcut">
            <string>Right</string>
@@ -376,13 +328,131 @@
            </size>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: rgb(164, 0, 0);</string>
+           <string notr="true">background-color: rgb(255, 170, 0)</string>
           </property>
           <property name="text">
-           <string>Stop</string>
+           <string>停止</string>
           </property>
           <property name="shortcut">
            <string>Space</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>381</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>网络</string>
+    </property>
+    <widget class="QWidget" name="gridLayoutWidget_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>361</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_6">
+      <item row="0" column="0">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QLineEdit" name="lineEdit_server_ip">
+          <property name="minimumSize">
+           <size>
+            <width>113</width>
+            <height>21</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>113</width>
+            <height>21</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label">
+          <property name="minimumSize">
+           <size>
+            <width>8</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>8</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLineEdit" name="lineEdit_server_port">
+          <property name="minimumSize">
+           <size>
+            <width>51</width>
+            <height>21</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>21</width>
+            <height>16777215</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="pushButton_connect_server_ip">
+          <property name="minimumSize">
+           <size>
+            <width>61</width>
+            <height>28</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>61</width>
+            <height>28</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>连接</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="pushButton_disconnect_server_ip">
+          <property name="minimumSize">
+           <size>
+            <width>61</width>
+            <height>28</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>61</width>
+            <height>28</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>断开</string>
           </property>
          </widget>
         </item>
@@ -397,8 +467,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>636</width>
-     <height>22</height>
+     <width>610</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
